--- a/contact.html
+++ b/contact.html
@@ -55,8 +55,8 @@
 </header>
 <main>
 	<p>you can send death threats to my discord account <strong>erykgroch</strong> and i will respond as if im scared</p>
-	
 	<p><a href="big_five_report.pdf" target="_blank">My www.understandmyself.com Jordan Peterson test results</a><a href="big_five_report.pdf?force_download=True" class="button-download" target="_blank">Download</a></p>
+	<p><a href="https://youtu.be/aCHYo8SzYWc" target="_blank">Learn more about Jordan Peterson's O.C.E.A.N. Model</a><a href="https://youtu.be/aCHYo8SzYWc" class="button-download" target="_blank">YouTube</a></p>
 	<!-- Blog Post 1 
     <div class="contact-info">
         <h1>Contact Information</h1>
